tests/ui/non_bool_cond.stderr
[tests/ui/non_bool_cond.pea:2:8] error: mismatched types: expected `bool`, found: `i64`

error: aborting due to 1 previous error

