tests/ui/non_bool_cond.pea
fn main() {
    if 0 {}
}
